# ChangeLog for dev-tcltk/blt
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/blt/ChangeLog,v 1.33 2010/03/06 12:16:07 jlec Exp $

*blt-2.4z-r6 (06 Mar 2010)

  06 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org> +blt-2.4z-r6.ebuild,
  +files/blt-2.4z-ldflags.patch:
  EAPI=3, respecting CC & LDFLAGS per 247195, ~{amd86,x86}-linux keyworded,
  corrected shebangs in demos

  22 Sep 2009; Markus Meier <maekke@gentoo.org> blt-2.4z-r5.ebuild:
  amd64 stable, bug #281404

  12 Sep 2009; Raúl Porcel <armin76@gentoo.org> blt-2.4z-r5.ebuild:
  sparc stable wrt #281404

  31 Aug 2009; Brent Baude <ranger@gentoo.org> blt-2.4z-r5.ebuild:
  Marking blt-2.4z-r5 ppc64 for bug 281404

  29 Aug 2009; nixnut <nixnut@gentoo.org> blt-2.4z-r5.ebuild:
  ppc stable #281404

  18 Aug 2009; Christian Faulhammer <fauli@gentoo.org> blt-2.4z-r5.ebuild:
  stable x86, bug 281404

  08 Aug 2009; Federico Ferri <mescalinum@gentoo.org> -blt-2.4z-r2.ebuild,
  -blt-2.4z-r4.ebuild:
  removed old ebuilds

*blt-2.4z-r5 (08 Aug 2009)

  08 Aug 2009; Federico Ferri <mescalinum@gentoo.org> +blt-2.4z-r5.ebuild,
  +files/pkgIndex.tcl:
  fix bug 259338

  27 Oct 2008; Federico Ferri <mescalinum@gentoo.org>
  +files/blt-2.4z-tcl8.5-fixpkgruntime.patch:
  forgot to add $FILESDIR/blt-2.4z-tcl8.5-fixpkgruntime.patch

*blt-2.4z-r4 (26 Oct 2008)

  26 Oct 2008; Federico Ferri <mescalinum@gentoo.org>
  +files/blt-2.4z-r4-fix-makefile.patch,
  +files/blt-2.4z-r4-fix-makefile2.patch, +blt-2.4z-r4.ebuild:
  revision bump, now using fork from jdc - fixes #212711

  16 Feb 2008; Tom Gall <tgall@gentoo.org> blt-2.4z-r1.ebuild:
  stable on ppc64

  10 Dec 2007; Tom Gall <tgall@gentoo.org> blt-2.4z-r1.ebuild,
  blt-2.4z-r2.ebuild:
  added ~ppc64, change 64 bit fix to always apply (it's safe)

*blt-2.4z-r2 (29 Apr 2007)

  29 Apr 2007; MATSUU Takuto <matsuu@gentoo.org> -blt-2.4z.ebuild,
  blt-2.4z-r1.ebuild, +blt-2.4z-r2.ebuild:
  Fixed bug 167934.
