@@ -13,12 +13,13 @@ DIST blt2.4z-8.5.2.tar.gz 2326234 RMD160 1012e0a21a9b45957d6482e55e21b9e54e3f1db
 EBUILD blt-2.4z-r1.ebuild 1546 RMD160 fbe03e761a4805d08b09134fc99fe1841ce4ae4e SHA1 6f102bd18477c337311b0b295223d57d2b4b9de6 SHA256 b86793214d4c68ccbf47157907102a36c1280b38323fc42b2b2bd1a3290e792e
 EBUILD blt-2.4z-r5.ebuild 2019 RMD160 3c4621ed1444563a5230d93bbaacf9ce996142a1 SHA1 2125adf5c0a69ecaff278dad225af8d4d2b4de70 SHA256 50c7cbb9a84c13ba123372af8bf7ecdfe2b960a3ed7ff6b89b8679555af1a2d4
 EBUILD blt-2.4z-r6.ebuild 2927 RMD160 4891fa495042809d0439ebe7f56939f105990ead SHA1 0ffaa8becfbffeef615a81f5b341391c8e914c3b SHA256 e2050eb7017efc14a0a1c082a789ae9182a4dac2dd32dc7dc678988cb0b44935
-MISC ChangeLog 4658 RMD160 7ab25883d60ff129f296a808df57d7a60c688ec6 SHA1 060283dca176aa8bdafe9c79ef367160f08868ec SHA256 c44b8444c795852dbb176e9b50ff32c297e5b7dd6fb72f321bdf86846bdfafbc
+EBUILD blt-2.4z-r7.ebuild 3108 RMD160 cf5f64fd794027caac7a39fde7dbc3024ca93595 SHA1 5ef78d2187cc1fe55acc1b8fc4397f1782d34ba5 SHA256 d0cfc0f380eece2a045bd7e41f5164214823aca024180d06e602220192d529e9
+MISC ChangeLog 4810 RMD160 cf10c6c9feaa2379594b7fef83064d4348ed3501 SHA1 ffb6ee9f27c936f6bb32b77f73f3c94820aaa073 SHA256 69d8e10b4ec6d5d7b31a38d53c82e2a804b2f25d68cf35a62f5b8e8c63088c8c
 MISC metadata.xml 158 RMD160 f197c34c7dd71f6025e93436e3f999137928554a SHA1 edb8e5ac668440e92e947fc3dff54484b28c7775 SHA256 62fb2b0a899315973de885234e3931a2f652b343b68f90fe0778378fdca6f290
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuSR40ACgkQgAnW8HDreRZP8ACg0cxpuALsVI7I0XWKpr+VVz4R
-rwUAoK7aXP8a0Lkfa5f57oQ1SatXQ0L2
-=cSvd
+iEYEARECAAYFAkumfAYACgkQgAnW8HDreRZsPQCeJXgDMiGJZvjid/X/yccICCgg
+DdkAn2fpL95ITwc9PL6QhWz5cuYknDT0
+=WGqw
 -----END PGP SIGNATURE-----
