@@ -1,6 +1,11 @@
 # ChangeLog for dev-tcltk/blt
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/blt/ChangeLog,v 1.33 2010/03/06 12:16:07 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/blt/ChangeLog,v 1.34 2010/03/21 20:05:21 jlec Exp $
+
+*blt-2.4z-r7 (21 Mar 2010)
+
+  21 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org> +blt-2.4z-r7.ebuild:
+  Add symlink so that -lBLT hits the shared lib
 
 *blt-2.4z-r6 (06 Mar 2010)
 
